--- a/index.html
+++ b/index.html
@@ -5,8 +5,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML & CSS Exercise</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container-fluid w-50 mt-5 mb-5">
+        <h1>HTML & CSS Exercise</h1>
+
+        <div class="mt-3">
+            <h3>Table</h3>
+
+            <h6>Instructions:</h6>
+            <div class="mt-2">
+                <ol>
+                    <li>
+                        Create a <strong>Social Media Table</strong> with the following headers:
+                        <ul>
+                            <li>No.</li>
+                            <li>Social Media</li>
+                            <li>Description</li>
+                            <li>URL</li>
+                        </ul>
+                    </li>
+                    <li>
+                        List all social media sites you can think of.
+                    </li>
+                    <li>
+                        In <strong>Description</strong> column, just generate a <em>lorem</em> dummy text.
+                    </li>
+                    <li>
+                        In <strong>URL</strong> column, make an <code>href</code> tag that links to their website.
+                        <ul>
+                            <li>
+                                Make sure to include their full website, for example: <em>https://www.website.com</em>
+                            </li>
+                            <li>
+                                When you click the link, open the website in new tab.
+                            </li>
+                            <li>
+                                Use <code>#6495ed</code> for link color.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Header should have a background of <code>#d3d3d3</code> and text color is <code>#000000</code>.
+                    </li>
+                    <li>
+                        Border color should be <code>#000000</code>.
+                    </li>
+                    <li>
+                        Collapse table border and set the padding to <code>1em</code>.
+                    </li>
+                    <li>
+                        Save your table with <code>socmed.html</code> filename.
+                    </li>
+                </ol>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="mt-3">
+            <h3>Form</h3>
+
+            <h6>Instructions:</h6>
+            <div class="mt-2">
+                <ol>
+                    <li>
+                        Create a registration form with the following fields:
+                        <ul>
+                            <li>First Name</li>
+                            <li>Last Name</li>
+                            <li>Email</li>
+                            <li>Birthday</li>
+                            <li>
+                                Gender
+                                <ul>
+                                    <li>Use radio button input type.</li>
+                                </ul>
+                            </li>
+                            <li>
+                                Civil Status (Single, Married, Separated, Widowed)
+                                <ul>
+                                    <li>Use select input type.</li>
+                                </ul>
+                            </li>
+                            <li>
+                                Select Social Media (Facebook, Instagram, Twitter)
+                                <ul>
+                                    <li>Use checkbox input type.</li>
+                                </ul>
+                            </li>
+                            <li>Password</li>
+                        </ul>
+                    </li>
+                    <li>Set the proper input type for each fields.</li>
+                    <li>
+                        Add <strong>Submit</strong> and <strong>Cancel</strong> buttons at the bottom.
+                        <ul>
+                            <li>Submit and Cancel should have a different style.</li>
+                        </ul>
+                    </li>
+                    <li>Design your own form. Be creative.</li>
+                </ol>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
